feat: complete trip route playback and stop history