@@ -14,6 +14,7 @@ import com.alels.backend.serverops.shared.security.JwtUserContext;
 import com.alels.backend.telemetry.device.deviceworkspace.tab.triproute.dto.DeviceWorkspaceTripRouteDtos.TripDetailResponse;
 import com.alels.backend.telemetry.device.deviceworkspace.tab.triproute.dto.DeviceWorkspaceTripRouteDtos.TripListResponse;
 import com.alels.backend.telemetry.device.deviceworkspace.tab.triproute.dto.DeviceWorkspaceTripRouteDtos.TripPoint;
+import com.alels.backend.telemetry.device.deviceworkspace.tab.triproute.dto.DeviceWorkspaceTripRouteDtos.TripRouteOverlay;
 import com.alels.backend.telemetry.device.deviceworkspace.tab.triproute.dto.DeviceWorkspaceTripRouteDtos.TripSummary;
 import com.alels.backend.telemetry.device.deviceworkspace.tab.triproute.repository.DeviceWorkspaceTripRouteRepository;
 import com.alels.backend.telemetry.device.deviceworkspace.tab.triproute.repository.DeviceWorkspaceTripRouteRepository.TelemetryPoint;
@@ -24,7 +25,7 @@ import com.alels.backend.telemetry.device.repository.TelemetryDeviceRepository.D
 public class DeviceWorkspaceTripRouteService {
     static final Duration MAX_RANGE = Duration.ofDays(31);
     private static final Duration MAX_PACKET_GAP = Duration.ofMinutes(30);
-    private static final Duration STOP_CONFIRMATION = Duration.ofMinutes(5);
+    private static final Duration IGNITION_CONFIRMATION = Duration.ofSeconds(10);
     private static final double MOVEMENT_SPEED_KMH = 3.0;
     private static final double MAX_PLAUSIBLE_SPEED_KMH = 220.0;
 
@@ -44,7 +45,17 @@ public class DeviceWorkspaceTripRouteService {
         if (points.size() > DeviceWorkspaceTripRouteRepository.MAX_RANGE_POINTS) {
             throw new ResponseStatusException(HttpStatus.PAYLOAD_TOO_LARGE, "Trip range contains too many telemetry points. Select a shorter range.");
         }
-        return new TripListResponse(segment(points));
+        List<TripSummary> trips = segment(points);
+        List<TripRouteOverlay> routes = trips.stream().map(trip -> new TripRouteOverlay(
+                trip.id(), points.stream()
+                        .filter(point -> !point.occurredAt().isBefore(Instant.parse(trip.startTime()))
+                                && !point.occurredAt().isAfter(Instant.parse(trip.endTime())))
+                        .filter(this::validPosition)
+                        .map(point -> new TripPoint(point.id(), point.occurredAt().toString(), point.latitude(),
+                                point.longitude(), point.speed(), point.angle(), movement(point)))
+                        .toList()
+        )).toList();
+        return new TripListResponse(trips, routes);
     }
 
     public TripDetailResponse detail(JwtUserContext user, Long deviceId, String fromValue, String toValue) {
@@ -55,7 +66,7 @@ public class DeviceWorkspaceTripRouteService {
         if (points.size() > DeviceWorkspaceTripRouteRepository.MAX_DETAIL_POINTS) {
             throw new ResponseStatusException(HttpStatus.PAYLOAD_TOO_LARGE, "Selected trip contains too many telemetry points. Select a shorter interval.");
         }
-        TripSummary summary = summarize(points, false);
+        TripSummary summary = summarize(points, ignitionOn(points.getFirst()) ? "TRIP" : "STOP", false);
         List<TripPoint> track = points.stream().filter(this::validPosition).map(point -> new TripPoint(
                 point.id(), point.occurredAt().toString(), point.latitude(), point.longitude(),
                 point.speed(), point.angle(), movement(point))).toList();
@@ -66,51 +77,63 @@ public class DeviceWorkspaceTripRouteService {
 
     private List<TripSummary> segment(List<TelemetryPoint> points) {
         List<TripSummary> result = new ArrayList<>();
-        List<TelemetryPoint> active = null;
-        Instant stationarySince = null;
+        List<TelemetryPoint> trip = null;
+        List<TelemetryPoint> stop = null;
+        boolean tripConfirmed = false;
         TelemetryPoint previous = null;
         for (TelemetryPoint point : points) {
-            boolean moving = moving(point);
             boolean gap = previous != null && Duration.between(previous.occurredAt(), point.occurredAt()).compareTo(MAX_PACKET_GAP) > 0;
-            if (active != null && gap) {
-                addTrip(result, active, false);
-                active = null;
-                stationarySince = null;
+            if (gap) {
+                trip = null;
+                stop = null;
+                tripConfirmed = false;
             }
-            if (active == null) {
-                if (moving && validPosition(point)) {
-                    active = new ArrayList<>();
-                    if (previous != null && validPosition(previous)
-                            && Duration.between(previous.occurredAt(), point.occurredAt()).compareTo(MAX_PACKET_GAP) <= 0) {
-                        active.add(previous);
+            if (trip == null) {
+                if (ignitionOn(point)) {
+                    if (stop != null) {
+                        stop.add(point);
+                        addSegment(result, stop, "STOP", false);
+                        stop = null;
                     }
-                    active.add(point);
+                    trip = new ArrayList<>();
+                    trip.add(point);
                 }
             } else {
-                active.add(point);
-                if (moving) {
-                    stationarySince = null;
-                } else if (stationarySince == null) {
-                    stationarySince = point.occurredAt();
-                } else if (Duration.between(stationarySince, point.occurredAt()).compareTo(STOP_CONFIRMATION) >= 0) {
-                    addTrip(result, active, false);
-                    active = null;
-                    stationarySince = null;
+                trip.add(point);
+                if (Duration.between(trip.getFirst().occurredAt(), point.occurredAt())
+                        .compareTo(IGNITION_CONFIRMATION) > 0) {
+                    tripConfirmed = true;
+                }
+                if (ignitionOff(point)) {
+                    if (tripConfirmed) {
+                        addSegment(result, trip, "TRIP", false);
+                        stop = new ArrayList<>();
+                        stop.add(point);
+                    }
+                    trip = null;
+                    tripConfirmed = false;
                 }
             }
             previous = point;
         }
-        if (active != null) addTrip(result, active,
-                Duration.between(active.get(active.size() - 1).occurredAt(), Instant.now()).compareTo(MAX_PACKET_GAP) <= 0);
+        if (trip != null && tripConfirmed
+                && Duration.between(trip.getLast().occurredAt(), Instant.now()).compareTo(MAX_PACKET_GAP) <= 0) {
+            addSegment(result, trip, "TRIP", true);
+        } else if (stop != null && stop.size() > 1
+                && Duration.between(stop.getLast().occurredAt(), Instant.now()).compareTo(MAX_PACKET_GAP) <= 0) {
+            addSegment(result, stop, "STOP", true);
+        }
         return result.reversed();
     }
 
-    private void addTrip(List<TripSummary> result, List<TelemetryPoint> points, boolean inProgress) {
-        long movingPoints = points.stream().filter(this::moving).count();
-        if (movingPoints > 0 && points.size() > 1) result.add(summarize(points, inProgress));
+    private void addSegment(List<TripSummary> result, List<TelemetryPoint> points, String type, boolean inProgress) {
+        if (points.size() > 1) result.add(summarize(points, type, inProgress));
     }
 
-    private TripSummary summarize(List<TelemetryPoint> points, boolean inProgress) {
+    private boolean ignitionOn(TelemetryPoint point) { return point.ignition() != null && point.ignition() > 0; }
+    private boolean ignitionOff(TelemetryPoint point) { return point.ignition() != null && point.ignition() <= 0; }
+
+    private TripSummary summarize(List<TelemetryPoint> points, String type, boolean inProgress) {
         TelemetryPoint first = points.get(0), last = points.get(points.size() - 1);
         double distance = 0, maximumSpeed = 0, speedTotal = 0;
         long speedCount = 0;
@@ -127,7 +150,7 @@ public class DeviceWorkspaceTripRouteService {
             }
             previous = point;
         }
-        return new TripSummary(first.id() + "-" + last.id(), inProgress ? "IN_PROGRESS" : "COMPLETED",
+        return new TripSummary(first.id() + "-" + last.id(), type, inProgress ? "IN_PROGRESS" : "COMPLETED",
                 first.occurredAt().toString(), last.occurredAt().toString(),
                 Math.max(0, Duration.between(first.occurredAt(), last.occurredAt()).toSeconds()),
                 round(distance), round(speedCount == 0 ? 0 : speedTotal / speedCount), round(maximumSpeed),
